--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@nangohq/frontend": "^0.62.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-router": "^1.123.2",
+    "cuid": "^3.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
